# icfpc-2024

./: .gitignore  Cargo.toml  README.md  fetch.sh  submit.sh
core/: Cargo.toml
core/src/: client.rs  lib.rs  parser.rs
core/src/parser/: ast.rs  icfpstring.rs  ifcpstring.rs  mod.rs  parser.rs  tokenizer.rs
core/src/tsp/: array_solution.rs  bitset.rs  euclid_distance.rs  evaluate.rs  lkh.rs  neighbor_table.rs  opt2.rs  opt3.rs  segment_tree.rs  two_level_tree_solution.rs
dataset/command/: 3d.txt  echo.txt  efficiency.txt  lambdaman.txt  languaget_test.txt  scoreboard.txt  spaceship.txt
dataset/decoded/: 3d.md  echo.md  efficiency.md  lambdaman.md  language_test.md  language_test_response.md  scoreboard.md  spaceship.md
dataset/encoded/: 3d.txt  efficiency.txt  index.txt  lambdaman.txt  scoreboard.txt  spaceship.txt
dataset/encoded/lambdaman/: 1.txt  11.txt  12.txt  13.txt  14.txt  15.txt  17.txt  18.txt  19.txt  2.txt  20.txt  3.txt  4.txt  5.txt  7.txt  8.txt
dataset/fetch/: spaceship.sh
dataset/info/: d3-test.txt  efficiency-problem0.txt  efficiency-problem1.dot  無限簡約.md  無限簡約2.md
docs/: diary.md  language-spec.md
efficiency-solver/: Cargo.toml
efficiency-solver/src/: main.rs
lambdaman-solver/: Cargo.toml
lambdaman-solver/src/: main.rs
macro-util/: Cargo.toml
macro-util/src/: lib.rs
message-sender/: Cargo.toml
message-sender/src/: main.rs
solution-encoder/: Cargo.toml
solution-encoder/src/: main.rs
spaceship-solver/: Cargo.toml
spaceship-solver/src/: main.rs
translator/: Cargo.toml
translator/src/: main.rs
(+67 files in other folders)
