[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
thiserror = "*"
macro-util = { path = "../macro-util" }
proconio = "0.4.5"
rayon = "1.10"
rand = "0.8.5"
num-bigint = "0.4.6"
